--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,15 +37,16 @@ description = "An demo of Litestar web app."
 version = "0.0.1"
 
 [tool.poetry.dependencies]
-python = ">=3.12, <4.0"
-litestar = {extras = ["jinja", "jwt", "structlog"], version = "*"}
-advanced-alchemy = {extras = ["uuid"], version = ">=0.33.2"}
+python = "^3.12, <4.0"
+litestar = {extras = ["standard"], version = "^2"}
+advanced-alchemy = "^0.20"
 asyncpg = "*"
-python-dotenv = "*"
+python-dotenv = "^1"
+litestar-granian = "^0"
+litestar-asyncpg = "^0"
+msgspec = "^0.18.6"
 passlib = {extras = ["argon2"], version = "*"}
-aiosqlite = "*"
 httptools = "*"
-httpx-oauth = ">=0.16.1"
 
 [tool.poetry.group.dev.dependencies]
 # Group: dev includes linting, testing, and docs
@@ -299,13 +300,11 @@ ignore_missing_imports = true
 module = [
   "sqlalchemy.*",
   "saq.*",
-  "uvicorn.*",
   "aiohttp.*",
   "jsbeautifier",
   "jsbeautifier.*",
   "uvloop",
   "uvloop.*",
-  "nodeenv",
 ]
 
 [[tool.mypy.overrides]]
