--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
   "Typing :: Typed",
 ]
 description = "An demo of Litestar web app."
+
 keywords = ["litestar", "sqlalchemy", "alembic", "api", "asgi", "litestar"]
 license = { text = "MIT" }
 name = "app"
@@ -26,7 +27,7 @@ Homepage = "https://github.com/SBKubric/litestar-demo"
 Issue = "https://github.com/SBKubric/litestar-demo/issues/"
 Source = "https://github.com/SBKubric/litestar-demo"
 
-[project.scripts]
+[tool.poetry.scripts]
 app = "app.__main__:run_cli"
 
 [tool.poetry]
@@ -38,7 +39,7 @@ version = "0.0.1"
 
 [tool.poetry.dependencies]
 python = "^3.12, <4.0"
-litestar = {extras = ["standard"], version = "^2"}
+litestar = {extras = ["jwt"], version = "^2"}
 advanced-alchemy = "^0.20"
 asyncpg = "*"
 python-dotenv = "^1"
@@ -47,6 +48,7 @@ litestar-asyncpg = "^0"
 msgspec = "^0.18.6"
 passlib = {extras = ["argon2"], version = "*"}
 httptools = "*"
+structlog = "^25.2.0"
 
 [tool.poetry.group.dev.dependencies]
 # Group: dev includes linting, testing, and docs
@@ -300,6 +302,7 @@ ignore_missing_imports = true
 module = [
   "sqlalchemy.*",
   "saq.*",
+  "uvicorn.*",
   "aiohttp.*",
   "jsbeautifier",
   "jsbeautifier.*",
