fix: turned off docs.yml

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -3,9 +3,9 @@ name: Documentation Building
 on:
   release:
     types: [published]
-  push:
-    branches:
-      - main
+  # push:
+  #   branches:
+  #     - main
 
 jobs:
   docs:
